# example-cpp-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Containerfile.dev.Cpp  devcontainer.json
app/src/: app.cpp
libs/logger/: CMakeLists.txt  logger.cpp  logger.hpp
